--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,9 @@
+body::before {
+  display: block;
+  content: "";
+  height: 60px;
+}
+
 @media (min-width: 768px) {
   .news-input {
     width: 50%;
@@ -5,6 +11,17 @@
 }
 
 img {
-  width: 250px;
-  height: 200px;
+  width: 550px;
+  height: 350px;
+}
+
+#map {
+  width: 550px;
+  height: 350px;
+  border-radius: 10px;
+}
+
+.photo {
+  width: 150px;
+  height: 100px;
 }
